--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
-
+.duckdb
 # Environments
 .env
 .venv
@@ -158,3 +158,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+fingrid_pipeline_dataset_74.duckdb
