--- a/.github/workflows/etlinrunner.yml
+++ b/.github/workflows/etlinrunner.yml
@@ -1,26 +1,14 @@
 on:
-    workflow_dispatch:
-    schedule:
-      - cron: '0 */8 * * *'
-  
-    push:
-      # Run when commits are pushed to mainline branch (main or master)
-      # Set this to the mainline branch you are using
-      branches:
-        - main
-        - master
-  
-
-  
-  jobs:
+  workflow_dispatch:
+  schedule:
+    - cron: '0 */8 * * *'
+jobs:
     build:
       runs-on: ubuntu-latest
       env:
-        AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
-        AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-        AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-        AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-     
+        API_URL: ${{secrets.API_URL}}
+        API_KEYAUTH: ${{secrets.API_KEYAUTH}}
+        API_SECRET: ${{secrets.API_SECRET}}
       steps:
         - name: Checkout
           uses: actions/checkout@v3
