--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,13 @@ line-length = 120
 
 [tool.pytest.ini_options]
 addopts = "-ra"
-pythonpath = ["utils"]
+pythonpath = ["."]
 
 [tool.coverage.paths]
 source = [".", "utils"]
 
 [tool.coverage.report]
 show_missing = true
+
+
+
