--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,6 @@
     "image": "mcr.microsoft.com/devcontainers/python:3.11",
     "features": {
         "ghcr.io/devcontainers/features/node:1": {
-            // This should match the version of Node.js in Github Actions workflows
             "version": "18",
             "nodeGypDependencies": false
         },
@@ -20,10 +19,7 @@
             ]
         }
     },
-    "forwardPorts": [
-        50505
-    ],
-    "postCreateCommand": "",
+    "postCreateCommand": "curl -LsSf https://astral.sh/uv/install.sh | sh && uv pip install -r requirements.dev.txt",
     "remoteUser": "vscode",
     "hostRequirements": {
         "memory": "8gb"
