--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ELT With dlt-hub, DuckDB, Python and Github Actions",
+    "name": "ELT With dlt-hub, DuckDB, Python and GitHub Actions",
     "image": "mcr.microsoft.com/devcontainers/python:3.11",
     "features": {
         "ghcr.io/devcontainers/features/node:1": {
@@ -19,7 +19,7 @@
             ]
         }
     },
-    "postCreateCommand": "curl -LsSf https://astral.sh/uv/install.sh | sh && uv pip install -r requirements.dev.txt",
+    "postCreateCommand": "curl -LsSf https://astral.sh/uv/install.sh | sh && uv venv .venv && uv pip install -r requirements.dev.txt",
     "remoteUser": "vscode",
     "hostRequirements": {
         "memory": "8gb"
