Update test suite and dependencies; add pytest and new test case

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ tests/__pycache__/test_main_code.cpython-311-pytest-8.3.1.pyc
 tests/__pycache__/test_main.cpython-311-pytest-8.3.1.pyc
 tests/__pycache__/test_main2.cpython-311-pytest-8.3.1.pyc
 .env
+tests/__pycache__/test_main_code.cpython-311-pytest-8.3.4.pyc
